# coder-guardian-angle

./: .gitignore  COURSE_DESCRIPTION.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_READINESS.md  EXPERIMENT_AGENT_DESIGN_v4.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/repoctx/: __init__.py  __main__.py  audit.py  cli.py  context_router.py  entry_context.py  initialization.py  loader.py
src/repoctx/cards/: __init__.py  models.py
src/repoctx/experiments/: __init__.py  contract.py  diagnose.py  history.py  light_analyzer.py  llm_analyzer.py  monitor.py  notifier.py  result_reader.py  runner.py
src/repoctx/guards/: __init__.py  base.py  commit_check.py  legacy_check.py  reuse_check.py  structure_check.py  test_impact.py
src/repoctx/llm/: __init__.py  client.py  errors.py  logger.py  pipeline.py  tokenizer.py
src/repoctx/models/: __init__.py  capability.py  config.py  experiment.py  protected_core.py  rules.py
src/repoctx/prompts/: context_router.txt  dual_track_diagnosis.txt  structure_guard.txt
src/repoctx/refactor/: __init__.py  refactor_suggest.py
src/repoctx/scanner/: __init__.py  auto_analysis.py  auto_discovery.py  engine.py  entity_extractor.py  file_scanner.py  graph_builder.py  indexer.py  module_resolver.py  relation_extractor.py  review_interaction.py
src/repoctx/semantic_memory/: __init__.py  engine.py  prompt_builder.py  refresh_engine.py  versioning.py
src/repoctx/task_workspace/: __init__.py  engine.py
src/repoctx/tracer/: __init__.py  base.py  (+1 more)
tests/: test_audit.py  test_auto_analysis.py  test_card_management.py  test_cli_exists.py  test_cli_experiments.py  test_config_system.py  test_context_router.py  test_entry_context.py  test_experiments_contract.py  test_experiments_light_analyzer.py  test_experiments_result_reader.py  test_file_scanner.py  test_guards.py  test_initialization.py  test_llm_client.py  test_refresh_engine.py  test_scanner.py  test_semantic_memory.py  test_task_workspace.py  test_tracer.py
(+8 files in other folders)
